# pixel_sorting

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cliConfig.hpp  sortingAlgos.hpp
src/: cliConfig.cpp  main.cpp  sortingAlgos.cpp
